<resources>
    <string name="app_name">ACR Barcode</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_title_noti">Thông báo</string>
    <string name="text_ok">OK</string>
    <string name="text_username_null">Vui lòng nhập tên đăng nhập</string>
    <string name="text_password_null">Vui lòng nhập mật khẩu</string>
    <string name="text_create_code_package">Quét tạo mã gói</string>
    <string name="text_history_create_code">Lịch sử tạo mã gói</string>
    <string name="text_scan_warehouse">Quét nhập kho ACRYLIC</string>
    <string name="text_scan_delivery">Quét giao hàng</string>
    <string name="text_logout">Thoát</string>
    <string name="text_upload_all_data">Tải dữ liệu lên server</string>
    <string name="text_setting">Thiết lập - Hướng dẫn</string>
    <string name="text_import_works">Nhập công trình</string>
    <string name="text_check_code_scan">Xác nhận mã đã quét giao hàng</string>
    <string name="text_cancel">Hủy</string>
    <string name="text_do_you_want_logout">Bạn có muốn đăng xuất không?</string>
    <string name="text_yes">Có</string>
    <string name="text_no">Không</string>
    <string name="text_check_app_update">Kiểm tra cập nhật phần mềm</string>
    <string name="text_change_ip_address">Thay đổi địa chỉ IP</string>
    <string name="text_change_password">Đổi mật khẩu</string>
    <string name="text_reset_all_data">Xóa tất cả dữ liệu</string>
    <string name="text_old_password">Mật khẩu cũ</string>
    <string name="text_enter_old_password">Nhập mật khẩu cũ</string>
    <string name="text_new_password">Mật khẩu mới</string>
    <string name="text_enter_new_password">Nhập mật khẩu mới</string>
    <string name="text_confirm_password">Xác nhận mật khẩu</string>
    <string name="text_enter_confirm_password">Nhập lại mật khẩu mới</string>
    <string name="text_old_password_null">Mật khẩu cũ không được để trống</string>
    <string name="text_new_password_null">Vui lòng nhập mật khẩu mới</string>
    <string name="text_confirm_password_null">Vui lòng xác nhận mật khẩu mới</string>
    <string name="text_change_password_succes">Thay đổi mật khẩu thành công</string>
    <string name="text_confirm_pass_no_equal">Mật khẩu nhập lại không trùng khớp</string>
    <string name="text_version" formatted="true">Phiên bản: %s</string>
    <string name="text_report_detail_create_pack">Báo cáo chi tiết tạo gói</string>
    <string name="text_url_report" formatted="true">%s/Report/ReportInOutPackageDetailACRApp</string>
    <string name="text_download_list_prodution_success">Tải danh sách Sản Xuất thành công</string>
    <string name="text_download_list_product_success">Tải danh sách Sản Phẩm thành công</string>
    <string name="text_download_list_package_success">Tải danh sách Gói thành công</string>
    <string name="text_choose_request_produce">Chọn lệnh sản xuất</string>
    <string name="text_save_barcode">Bạn có muốn lưu mã này?</string>
    <string name="text_home">Trang chủ</string>
    <string name="text_minus">-</string>
    <string name="text_barcode_error_type">Mã quét loại này không đúng! Xin chọn mã khác!</string>
    <string name="text_barcode_error_lenght">Độ dài mã quét không đúng, Hãy kiểm tra lại!</string>
    <string name="text_product_empty">Không có SP nào trong Lệnh SX, Vui lòng tải lại!</string>
    <string name="text_barcode_no_exist">Mã quét không tồn tại trong Lệnh SX! Vui lòng thử mã khác!</string>
    <string name="text_save_barcode_success">Hợp lệ! Lưu Thành Công</string>
    <string name="text_add">Thêm</string>
    <string name="text_request_produce">Lệnh SX</string>
    <string name="text_code_so">Mã SO</string>
    <string name="text_customer_name">Tên KH</string>
    <string name="text_sum_detail">Tổng chi tiết:</string>
    <string name="text_number_bigger_zero">Số lượng nhập vào phải khác 0!</string>
    <string name="text_quantity_input_bigger_quantity_rest">Số lượng nhập vào không được vượt quá số lượng cho phép.</string>
    <string name="text_code_scan" >Mã quét:</string>
    <string name="text_date_scan">Ngày quét mã:</string>
    <string name="text_not_done_pack_current">Chưa hoàn thành gói hiện tại!</string>
    <string name="text_not_done_pack_current_refresh">Chưa hoàn thành gói hiện tại!Bạn có muốn hủy không?</string>
    <string name="text_back_cancel_order_not_print">Quay lại sẽ HỦY những mã chưa IN! \n Bạn có muốn hủy không?.</string>
    <string name="text_ip_address">Địa chỉ ip</string>
    <string name="text_port">Port</string>
    <string name="text_exit">Thoát</string>
    <string name="text_save">Lưu</string>
    <string name="text_number_input_had_enough">Số lượng nhập vào đã đủ</string>
    <string name="text_print">In</string>
    <string name="text_list_had_enough">Bạn đã quét đủ 11 mã cho một kiện, Không thể quét tiếp</string>
    <string name="tex_print_stemp">In tem</string>
    <string name="text_total">Tổng cộng:</string>
    <string name="text_serial_pack">STT Kiện:</string>
    <string name="text_date_create">Ngày đóng gói: </string>
    <string name="text_confirm_create_pack">Xác nhận tạo mã gói</string>
    <string name="text_no_connect_printer">Không có kết nối vs máy In! Không thể IN!!!</string>
    <string name="text_print_success">In thành công.</string>
    <string name="text_no_ip_address">Vui lòng nhập địa chỉ IP để kết nối máy in.</string>
    <string name="text_no_data">Không có dữ liệu</string>
    <string name="text_search">Tìm</string>
    <string name="text_order_id_null">Bạn chưa chọn lệnh sản xuất</string>
    <string name="text_detail_package">Chi tiết mã gói</string>
    <string name="text_done">Hoàn tất</string>
    <string name="text_print_again">In lại gói này</string>
    <string name="text_delete_pack">Bạn có muốn xóa gói này không?</string>
    <string name="text_delete_code">Bạn có muốn xóa mã này không?</string>
    <string name="text_delete_success">Xóa thành công</string>
    <string name="text_done_pack">Bạn muốn hoàn tất gói này không?</string>
    <string name="text_print_pack">Bạn có muốn in gói này không?</string>
    <string name="text_code_exist_in_pack">Mã quét đã tồn tại trong gói này</string>
    <string name="text_not_complete">Bạn vừa quét thêm mã chi tiết, \n chưa Hoàn tất không thể quay lại.</string>
    <string name="text_cancel_create_barcode">Bạn có muốn hủy mã quét này?</string>
    <string name="text_delete_pack_it">Xóa gói này</string>
    <string name="text_package_no_create">Mã gói này chưa được tạo! Hãy thử mã khác!</string>
    <string name="text_barcode_saved">Mã gói này đã được quét! Hãy thử mã khác!</string>
    <string name="text_into_warehousing_success">Nhập vào kho thành công</string>
    <string name="text_check">Kiểm tra</string>
    <string name="text_end">Kết thúc</string>
    <string name="text_test_address">Server Test</string>
    <string name="text_main_address">Server Chính</string>
    <string name="text_upload_success">Tải dữ liệu lên server thành công.</string>
    <string name="text_choose_server">Chọn server: </string>
    <string name="text_choose_server1">Chọn server</string>
    <string name="text_server_null">Bạn chưa chọn server.</string>
    <string name="text_web_report" formatted="true">%s/Report/Account/Login</string>
    <string name="text_name_database_test">barcodetest.realm</string>
    <string name="text_name_database_main">barcodemain.realm</string>
    <string name="text_path_file">/ACR/backup/</string>
    <string name="text_backup_success">Sao lưu thành công</string>
    <string name="text_save_success">Lưu thành công</string>
    <string name="text_backup_fail">Sao lưu thất bại</string>
    <string name="text_get_package_success">Tải danh sách mã gói trong Yêu cầu thành công!</string>
    <string name="text_code_null">Không có mã nào trong yêu cầu này!!</string>
    <string name="text_confirm">Xác nhận</string>
    <string name="text_done_pack_success">Đã hoàn tất gói</string>
    <string name="text_title_close">Bạn có muốn đóng ứng dụng không?</string>
    <string name="text_not_code_scan_new">Không có mã chi tiết mới để hoàn tất</string>
    <string name="text_progress_dialog">Vui lòng chờ...</string>
    <string name="text_email">imarkcomp@gmail.com</string>
    <string name="text_password">Imark2017</string>
    <string name="text_error_network">Lỗi kết nối mạng. Vui lòng kiểm tra lại mạng</string>
    <string name="text_error_network_host">Unable to resolve host</string>
    <string name="text_port_null">Vui lòng nhập số port!</string>
    <string-array name="server">
        <item>@string/text_choose_server1</item>
        <item>@string/text_main_address</item>
        <item>@string/text_test_address</item>
    </string-array>
</resources>
